finished gallery page

--- a/package.json
+++ b/package.json
@@ -12,21 +12,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^10.0.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.1",
-    "tw-elements": "^1.0.0-alpha13"
+    "swiper": "^9.1.0",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
     "vite": "^4.1.0"
   }
 }
