--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zarah-photography",
-  "private": true,
+  "private": false,
   "version": "0.1.0",
   "type": "module",
   "homepage": "/zarah-photography--react-web/#",
