--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zarah-photography",
   "private": false,
-  "version": "0.1.1",
+  "version": "0.2.1",
   "type": "module",
   "homepage": "/zarah-photography--react-web/#",
   "scripts": {
@@ -12,11 +12,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^10.0.1",
+    "framer-motion": "^10.12.12",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.8.1",
     "swiper": "^9.1.0",
     "tailwindcss": "^3.2.7"
